gccida/c0/unsigned_type
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/unsigned_type/src/c-common.c:1900:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *type1; // [rsp+8h] [rbp-18h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/unsigned_type/src/c-common.c:1915:28: error: expected expression
if ( type1 == ( tree_node *)*( &global_trees + 5) ) 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/unsigned_type/src/c-common.c:1915:17: error: use of undeclared identifier 'tree_node'
if ( type1 == ( tree_node *)*( &global_trees + 5) ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/unsigned_type/src/c-common.c:1917:28: error: expected expression
if ( type1 == ( tree_node *)*( &global_trees + 4) ) 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/unsigned_type/src/c-common.c:1917:17: error: use of undeclared identifier 'tree_node'
if ( type1 == ( tree_node *)*( &global_trees + 4) ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/unsigned_type/src/c-common.c:1919:28: error: expected expression
if ( type1 == ( tree_node *)*( &global_trees + 3) ) 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/unsigned_type/src/c-common.c:1919:17: error: use of undeclared identifier 'tree_node'
if ( type1 == ( tree_node *)*( &global_trees + 3) ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/unsigned_type/src/c-common.c:1921:28: error: expected expression
if ( type1 == ( tree_node *)*( &global_trees + 2) ) 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/unsigned_type/src/c-common.c:1921:17: error: use of undeclared identifier 'tree_node'
if ( type1 == ( tree_node *)*( &global_trees + 2) ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/unsigned_type/src/c-common.c:1923:28: error: expected expression
if ( type1 == ( tree_node *)*( &global_trees + 1) ) 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/unsigned_type/src/c-common.c:1923:17: error: use of undeclared identifier 'tree_node'
if ( type1 == ( tree_node *)*( &global_trees + 1) ) 
                ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/unsigned_type/src/obj/c-common.o] Error 1
